# hdMoonray

./: .gitignore  CMakeLists.txt  DWABUILD.md  README.md  SConscript  flowpipeline.yaml  package.py  testfileupdating.md
.github/workflows/: against-main.yml  trigger_CI_RaTS.yml
cmake/: HatsTest.cmake  HdMoonrayCompileDefinitions.cmake  HdMoonrayCompileOptions.cmake  HdMoonrayConfig.cmake.in
cmd/: CMakeLists.txt
cmd/hd_cmd/: CMakeLists.txt
cmd/hd_cmd/hd_render/: CMakeLists.txt  FreeCamera.cc  FreeCamera.h  MapGuard.h  OutputFile.cc  OutputFile.h  README.md  RenderOptions.cc  RenderOptions.h  RenderSettings.cc  RenderSettings.h  SConscript  SceneDelegate.cc  SceneDelegate.h  hd_render.cc
cmd/hd_cmd/hd_usd2rdl/: CMakeLists.txt  FreeCamera.cc  FreeCamera.h  MapGuard.h  README.md  RenderOptions.cc  RenderOptions.h  RenderSettings.cc  RenderSettings.h  SConscript  SceneDelegate.cc  SceneDelegate.h  hd_usd2rdl.cc
cmd/usd_mipmap_images/: CMakeLists.txt  SConscript  usd_mipmap_images
hats/: CMakeLists.txt  README.md
hats/camera/: CMakeLists.txt  camera_anim_focal.canonical.rdla  camera_anim_transform.canonical.rdla  camera_clipping.canonical.rdla  camera_dof.canonical.rdla  camera_dof.usd  camera_motion_blur.canonical.rdla
hats/geometry/: CMakeLists.txt  geometry_basis_curves.canonical.rdla  geometry_basis_curves.usd  geometry_instances.canonical.rdla  geometry_instances.usd  geometry_motion_blur.canonical.rdla  geometry_primvar_interpolation.canonical.rdla  geometry_primvar_interpolation.usd  geometry_primvars.canonical.rdla  geometry_procedural.canonical.rdla  geometry_procedural.usd  geometry_skel.canonical.rdla  geometry_skel.usd  geometry_subdivision.canonical.rdla  geometry_subdivision.usd  geometry_two_triangles.canonical.rdla  geometry_two_triangles.usd  geometry_volume.canonical.rdla
hats/light/: CMakeLists.txt  light_cylinder.canonical.rdla  light_cylinder.usd  light_disk.canonical.rdla  light_env.canonical.rdla  light_env.usd  light_env_textured.canonical.rdla  light_env_textured.usd  light_linking.canonical.rdla  light_linking.usd  light_mesh.canonical.rdla  light_mesh.usd  light_motion_blur.canonical.rdla  light_motion_blur.usd  light_rect.canonical.rdla  light_rect.usd  light_rect_textured.canonical.rdla  light_shadow.canonical.rdla  light_sphere.canonical.rdla  light_spot.canonical.rdla  light_sun.canonical.rdla
hats/lightfilter/: CMakeLists.txt  lightfilter_barn_door.canonical.rdla  lightfilter_color_ramp.canonical.rdla  lightfilter_combine.canonical.rdla  lightfilter_combine.usd  lightfilter_cookie.canonical.rdla  lightfilter_cookie.usd  lightfilter_cookie_projector.canonical.rdla  lightfilter_cookie_projector.usd  lightfilter_cookie_v2.canonical.rdla  lightfilter_decay.canonical.rdla  lightfilter_decay.usd  lightfilter_intensity.canonical.rdla  lightfilter_intensity.usd  lightfilter_rod.canonical.rdla  lightfilter_vdb.canonical.rdla  lightfilter_vdb.usd
hats/material/: CMakeLists.txt  material_dwabase.canonical.rdla  material_dwabase_defaults.canonical.rdla  material_dwabase_normal.canonical.rdla  material_dwabase_normal.usd  material_dwametal_defaults.canonical.rdla  material_udim.canonical.rdla  material_udim.usd
houdini/: CMakeLists.txt  SConscript  UsdRenderers.json
houdini/soho/: CMakeLists.txt
houdini/soho/parameters/: CMakeLists.txt  HdMoonrayRendererPlugin_Viewport.ds  SConscript
lib/: CMakeLists.txt
lib/hydramoonray/: BasisCurves.cc  BasisCurves.h  CMakeLists.txt  Camera.cc  Camera.h  CoordSys.cc  CoordSys.h  Geometry.cc  Geometry.h  GeometryMixin.cc  GeometryMixin.h  HdmLog.cc  Instancer.cc  Instancer.h  Light.cc  Light.h  LightFilter.cc  LightFilter.h  Material.cc  Mesh.cc  Mesh.h  MurmurHash3.cc  MurmurHash3.h  NullRenderer.cc  NullRenderer.h  Points.cc  Points.h  Primvars.cc  Procedural.cc  Procedural.h  RenderBuffer.cc  RenderBuffer.h  RenderDelegate.cc  RenderDelegate.h  RenderPass.cc  RenderSettings.cc  RenderSettings.h  Renderer.h  SConscript  Utils.h  (+3 more)
opensource_files/: CMakeLists.txt  README.md
opensource_files/pluginfo/: CMakeLists.txt
opensource_files/pluginfo/adapters/: CMakeLists.txt  plugInfo.json
opensource_files/pluginfo/src/: CMakeLists.txt  plugInfo.json
opensource_files/sessions/: CMakeLists.txt  hd_multi.sessiondef  hd_single.sessiondef
plugin/: CMakeLists.txt  plugInfo.json
plugin/adapters/: CMakeLists.txt  GeometryLightAdapter.cc  MoonrayLightFilterAdapter.cc  MoonrayLightFilterAdapter.h  MoonrayMeshLightAdapter.cc  MoonrayMeshLightAdapter.h  ProceduralAdapter.cc  ProceduralAdapter.h  plugInfo.json.in
plugin/hd_moonray/: ArrasRenderer.cc  ArrasRenderer.h  ArrasSettings.cc  ArrasSettings.h  CMakeLists.txt  RendererPlugin.cc  plugInfo.json  plugInfo.json.in
plugin/hd_moonray_debug/: CMakeLists.txt  RendererPlugin.cc  RndrRenderer.cc  RndrRenderer.h  plugInfo.json  plugInfo.json.in
plugin/houdini/: CMakeLists.txt  SConscript  UsdRenderers.json
plugin/houdini/soho/: CMakeLists.txt
sessions/: CMakeLists.txt  SConscript  hd_multi.sessiondef  hd_multi.sessiondef.in  hd_single.sessiondef.in
sessions/dwa/: hd_multi.sessiondef.in  hd_single.sessiondef  hd_single.sessiondef.in
src/: ArrasRenderer.cc  ArrasRenderer.h  ArrasSettings.cc  ArrasSettings.h  BasisCurves.cc  BasisCurves.h  CMakeLists.txt  Camera.cc  Camera.h  CoordSys.cc  CoordSys.h  Geometry.cc  Geometry.h  HdmLog.cc  HdmLog.h  Instancer.cc  Instancer.h  Light.cc  Light.h  LightFilter.cc  LightFilter.h  Material.cc  Material.h  Mesh.cc  Mesh.h  NullRenderer.cc  NullRenderer.h  PixelData.h  Points.cc  Points.h  Procedural.cc  Procedural.h  RenderBuffer.cc  RenderBuffer.h  RenderDelegate.cc  RenderDelegate.h  RenderPass.cc  RenderPass.h  RenderSettings.cc  RenderSettings.h  (+9 more)
src/adapters/: CMakeLists.txt  GeometryLightAdapter.cc  GeometryLightAdapter.h  MoonrayLightFilterAdapter.cc  MoonrayLightFilterAdapter.h  ProceduralAdapter.cc  ProceduralAdapter.h  SConscript  plugInfo.json
testSuite/: README.md  quarantined.json
testSuite/aov/: scene.usd  test.xml
testSuite/aov/aov/: test.xml
testSuite/aov/cryptomatte/: cryptomatte.usd
(+81 files in other folders)
